[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]

[node name="Main" type="Node"]
script = ExtResource( 2 )
enemy_scene = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0470588, 0.258824, 0.0745098, 1 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="MobSpawner" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreCounter" type="Timer" parent="."]

[node name="PlayerStartPosition" type="Position2D" parent="."]
position = Vector2( 640, 360 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobSpawner" to="." method="_on_MobSpawner_timeout"]
[connection signal="timeout" from="ScoreCounter" to="." method="_on_ScoreCounter_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
